<resources>
    <string name="app_name">Restroom_User</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_scrolling">User Feedback</string>
    <string name="location">"Restroom Location: MNNIT"</string>
    <string name="odour">"Odour Level"</string>
    <string name="clean">"Cleanliness Level"</string>
    <string name="soap">"Soap Availability"</string>
    <string name="water">"Water Availability"</string>
    <string name="rating">"Overall Rating"</string>
    <string name="feedback">"Any Feedback/Suggestion?"</string>
    <string name="action_settings">Settings</string>
    <string name="my_app_id">restroom_data-plldj</string>
</resources>
