<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.user.restroom_user.ScrollingActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorwhite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

           <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <ImageView

                android:src="@drawable/userimage"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="350dp" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

   <!--include layout="@layout/content_scrolling" />
    app:layout_collapse_Mode="pin"-->

    <android.support.v4.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:clipToPadding="false">
       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="5dp"
           app:cardElevation="5dp"
           app:cardUseCompatPadding="true">

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_marginTop="10dp"
               android:weightSum="1">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:textColor="@color/colorPrimary"
                   android:text="@string/location"
                   android:layout_weight="16.70" />
               </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:weightSum="1"
               android:layout_marginTop="45dp">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="20sp"
                   android:textColor="@color/colorAccent"
                   android:text="@string/odour"
                   android:layout_weight="16.70"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:weightSum="1"
               android:layout_marginTop="80dp">
               <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:layout_marginTop="5dp"
                   android:textColor="@color/colorsmalltext"
                   android:text="Negligible"
                   android:layout_gravity="start"
                   android:textAlignment="center"
                   android:layout_weight="0.5" />

               <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:layout_marginTop="5dp"
                   android:textColor="@color/colorsmalltext"
                   android:text="Pungent"
                   android:layout_gravity="end"
                   android:textAlignment="center"
                   android:layout_weight="0.5"/>
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_marginTop="110dp"
               android:weightSum="1">
               <SeekBar
                   android:layout_width="300dp"
                   android:layout_height="match_parent"
                   android:layout_gravity="center"
                   android:id="@+id/seekBar"
                   android:layout_weight="16.70"
                   android:indeterminate="false"
                   android:max="10"
                   android:progressTint="@android:color/holo_red_light" />
           </LinearLayout>


           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:weightSum="1"
               android:layout_marginTop="155dp">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="20sp"
                   android:textColor="@color/colorAccent"
                   android:text="@string/clean"
                   android:layout_weight="16.70"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:weightSum="1"
               android:layout_marginTop="190dp">
               <TextView
                   android:layout_width="167dp"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:layout_marginTop="5dp"
                   android:textColor="@color/colorsmalltext"
                   android:text="Dirty"
                   android:layout_gravity="start"
                   android:textAlignment="center" />

               <TextView
                   android:layout_width="220dp"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:layout_marginTop="5dp"
                   android:textColor="@color/colorsmalltext"
                   android:text="Clean"
                   android:layout_gravity="end"
                   android:textAlignment="center" />
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_marginTop="220dp"
               android:weightSum="1">
               <RatingBar
                   android:layout_width="259dp"
                   android:layout_height="match_parent"
                   android:id="@+id/ratingBar"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginLeft="40dp"
                   android:indeterminate="false"

                   android:progressTint="@android:color/holo_blue_light" />
           </LinearLayout>


           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:weightSum="1"
               android:layout_marginTop="290dp">
               <TextView
                   android:layout_width="178dp"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="20sp"
                   android:textColor="@color/colorAccent"
                   android:text="@string/soap"
                   />
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:text="Yes"
                   android:textSize="10dp"
                   android:textAlignment="center"
                   android:layout_gravity="end"/>
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end"
                   android:padding="5dp"
                   android:text="No"
                   android:textAlignment="center"
                   android:textSize="10dp" />

           </LinearLayout>

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:weightSum="1"
               android:layout_marginTop="350dp">
               <TextView
                   android:layout_width="178dp"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="20sp"
                   android:textColor="@color/colorAccent"
                   android:text="@string/water"
                   />
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:text="Yes"
                   android:textSize="10dp"
                   android:textAlignment="center"
                   android:layout_gravity="end"/>
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end"
                   android:padding="5dp"
                   android:text="No"
                   android:textAlignment="center"
                   android:textSize="10dp" />

           </LinearLayout>

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:weightSum="1"
               android:layout_marginTop="410dp">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="20sp"
                   android:textColor="@color/colorAccent"
                   android:text="@string/rating"
                   android:layout_weight="16.70"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:weightSum="1"
               android:layout_marginTop="440dp">
               <TextView
                   android:layout_width="167dp"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:layout_marginTop="5dp"
                   android:textColor="@color/colorsmalltext"
                   android:text="Sad"
                   android:layout_gravity="start"
                   android:textAlignment="center" />

               <TextView
                   android:layout_width="220dp"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="15sp"
                   android:layout_marginTop="5dp"
                   android:textColor="@color/colorsmalltext"
                   android:text="Happy"
                   android:layout_gravity="end"
                   android:textAlignment="center" />
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_marginTop="470dp"
               android:weightSum="1">
               <RatingBar
                   android:layout_width="259dp"
                   android:layout_height="match_parent"
                   android:id="@+id/ratingBar1"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginLeft="40dp"
                   android:indeterminate="false"
                   android:progressTint="@android:color/holo_green_light" />
           </LinearLayout>


           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:weightSum="1"
               android:layout_marginTop="540dp">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:textSize="20sp"
                   android:textColor="@color/colorAccent"
                   android:text="@string/feedback"
                   android:layout_weight="16.70"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:weightSum="1"
               android:layout_marginTop="580dp">

               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"

                   android:editable="true"
                   android:hint="Feedback here" />

               </LinearLayout>

           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:paddingBottom="20dp"
               android:weightSum="1"

               android:layout_marginTop="650dp">

               <Button
                   android:layout_width="100dp"
                   android:layout_height="wrap_content"
                   android:textAlignment="center"
                   android:padding="5dp"
                   android:clickable="true"
                   android:text="SUBMIT"
                   android:textColor="@color/abc_primary_text_disable_only_material_dark"
                   android:textSize="15dp"
                   android:backgroundTint="@color/colorAccent"
                   android:layout_gravity="center_horizontal" />
           </LinearLayout>


       </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
